--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@u-wave/react-youtube": "^0.7.2",
     "react": "^17.0.2",
+    "react-background-slider": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
